# libopencl-stub

./: Android.mk  CMakeLists.txt  Makefile  README.md  libopencl.c
include/: libopencl.h
include/CL/: cl.hpp
src/: libopencl.c
